--- a/wp-content/themes/THEME-WP-REALISE/style.css
+++ b/wp-content/themes/THEME-WP-REALISE/style.css
@@ -45,6 +45,8 @@ with others.
 	15. Widgets
 	16. Site Footer
 	17. Media Queries
+	18. Error 404 - HTML
+	19. 404 image
 
 ----------------------------------------------------------------------------- */
 
@@ -428,7 +430,7 @@ hr.styled-separator {
 
 .entry-content hr:not(.has-background),
 hr.styled-separator {
-	color: #6d6d6d;
+	color: #00FF00;
 }
 
 .entry-content hr::before,
@@ -456,7 +458,7 @@ hr.styled-separator::after {
 }
 
 a {
-	color: #cd2653;
+	color: #006600;
 	text-decoration: underline;
 }
 
@@ -539,7 +541,7 @@ dd + dt {
 /* Quotes ------------------------------------ */
 
 blockquote {
-	border-color: #cd2653;
+	border-color: #181617;
 	border-style: solid;
 
 	/*rtl:ignore*/
@@ -553,7 +555,7 @@ blockquote {
 }
 
 cite {
-	color: #6d6d6d;
+	color: #00FF00;
 	font-size: 1.4rem;
 	font-style: normal;
 	font-weight: 600;
@@ -630,7 +632,7 @@ object {
 
 figcaption,
 .wp-caption-text {
-	color: #6d6d6d;
+	color: #00FF00;
 	display: block;
 	font-size: 1.5rem;
 	font-weight: 500;
@@ -840,7 +842,7 @@ input[type="reset"],
 input[type="submit"] {
 	-webkit-appearance: none;
 	-moz-appearance: none;
-	background: #cd2653;
+	background: #0000FF;
 	border: none;
 	border-radius: 0;
 	color: #fff;
@@ -1309,7 +1311,7 @@ ul.social-icons li {
 
 .social-icons a {
 	align-items: center;
-	background: #cd2653;
+	background: #3126cd;
 	border-radius: 50%;
 	color: #fff;
 	display: flex;
@@ -1408,7 +1410,7 @@ body:not(.enable-search-modal) .header-titles-wrapper {
 
 .site-description {
 	margin-top: 1rem;
-	color: #6d6d6d;
+	color: #b91818;
 	font-size: 1.8rem;
 	font-weight: 500;
 	display: none;
@@ -6498,3 +6500,184 @@ a.to-the-top > * {
 		top: 0;
 	}
 }
+
+	/* Error 404 - HTML ---------------------- */
+	/* Dolorean Style ------------------------ */
+
+
+/* @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+	* {
+		padding: 0;
+		margin: 0;
+		box-sizing: border-box;
+		font-family: 'Press Start 2P';
+		color: #FFFFFF;
+		text-align: center;
+	}
+	
+	body {
+		background-color: #000000;
+		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='42' height='58' viewBox='0 0 42 58'%3E%3Cg fill='%23dddcdd' fill-opacity='0.23'%3E%3Cpath fill-rule='evenodd' d='M12 18h12v18h6v4H18V22h-6v-4zm-6-2v-4H0V0h36v6h6v36h-6v4h6v12H6v-6H0V16h6zM34 2H2v8h24v24h8V2zM6 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm8 0a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm8 0a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm8 0a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4zM2 50h32v-8H10V18H2v32zm28-6a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm0-8a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm0-8a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm0-8a2 2 0 1 0 0 4 2 2 0 0 0 0-4z'/%3E%3C/g%3E%3C/svg%3E");
+	}
+	
+	section.notFound {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin: 0 5%;
+		height: 100vh;
+	}
+	
+	section.notFound h1 {
+		color: red;
+		font-size: 100px;
+	}
+	
+	section.notFound h2 {
+		font-size: 50px;
+	}
+	
+	section.notFound h1, h2, h3 {
+		margin-bottom: 40px;
+	}
+	
+	div.text {
+		height: 50vh;
+	}
+	
+	div.text a {
+		text-decoration: none;
+		margin-right: 20px;
+	}
+	
+	div.text a:hover {
+		color: red;
+		text-decoration: underline; 
+	}
+	
+	@media only screen and (max-width: 768px) {
+		section.notFound {
+			flex-direction: column;
+			justify-content: space-around;
+		}
+		section.notFound div.img img {
+			width: 70vw;
+			height: auto;
+		}
+		section.notFound h1 {
+			font-size: 50px;
+		}
+		section.notFound h2 {
+			font-size: 25px;
+		}
+		div.text a:active {
+		color: red;
+		text-decoration: underline; 
+	  }
+	} */
+
+
+	.img-404-image{
+		
+		max-width: 120rem;
+		margin-left: auto;
+		
+	}
+
+	.img-Yoda{
+
+		border-radius:250px;
+		
+	}
+
+/* ------------------------------------------------------- */
+
+	.img-ToTheTOP{
+
+		border-radius:250px;
+		-webkit-text-size-adjust: 100%;
+		-webkit-tap-highlight-color: rgba(0,0,0,0);
+		font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,Liberation Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+		font-size: 1rem;
+		font-weight: 400;
+		line-height: 1.5;
+		color: #212529;
+		text-align: left;
+		cursor: pointer;
+		box-sizing: inherit;
+		border-style: none;
+		vertical-align: middle;
+		width: 80px;
+
+		-webkit-text-size-adjust: 100%;
+		-webkit-tap-highlight-color: rgba(0,0,0,0);
+		font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,Liberation Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+		font-size: 1rem;
+		font-weight: 400;
+		line-height: 1.5;
+		color: #212529;
+		text-align: left;
+		box-sizing: inherit;
+		position: fixed;
+		transition: all .3s;
+		cursor: pointer;
+		z-index: 1000;
+		right: 3px;
+		bottom: -6px;
+		opacity: 1;
+		
+
+	}
+
+/* --------------------------------- */
+
+.ScrollUpButton__Container ScrollUpButton__Toggled{
+
+	-webkit-text-size-adjust: 100%;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,Liberation Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 1.5;
+	color: #212529;
+	text-align: left;
+	box-sizing: inherit;
+	display: block;
+	cursor: pointer;
+
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,Liberation Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+    box-sizing: inherit;
+    position: fixed;
+    transition: all .3s;
+    cursor: pointer;
+    z-index: 1000;
+    right: 3px;
+    bottom: -6px;
+    opacity: 1;
+
+}
+
+/* ------------------------------------ */
+
+.img-mini{
+
+	box-sizing: inherit;
+	border-radius:250px;
+	width: 80px;
+	height: 50px;
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 1.5;
+}
+
+
+
+
